--- a/Chap05a.ipynb
+++ b/Chap05a.ipynb
@@ -329,6 +329,29 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "f6099a5e-3f46-4177-97ec-996e1b6a65e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class kotlin.ranges.IntRange"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range::class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "d2167adc-d350-4027-bf7f-f1d0c0ab499d",
    "metadata": {
     "tags": []
@@ -348,31 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "da3c2579-7e3c-4ecc-b3f1-bd4a3576fe63",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4 in range"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "id": "10639b6d-39a0-4660-b076-f78fdbd5f625",
+   "id": "da3c2579-7e3c-4ecc-b3f1-bd4a3576fe63",
    "metadata": {
     "tags": []
    },
@@ -389,12 +389,35 @@
     }
    ],
    "source": [
-    "14 !in range"
+    "4 in range"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "10639b6d-39a0-4660-b076-f78fdbd5f625",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "14 !in range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "c5b7fef0-286d-4aa5-bb10-51c67af6aaa4",
    "metadata": {
     "tags": []
@@ -416,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9b8aa969-4569-45db-9452-622abef669ee",
    "metadata": {
     "tags": []
@@ -428,7 +451,7 @@
        "true"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,31 +465,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2419aec2-b962-4324-8f20-bfa01fb9cfe6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0..9"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.until(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
-   "id": "82f0320e-be1e-4d54-8b10-463c7dacd207",
+   "id": "2419aec2-b962-4324-8f20-bfa01fb9cfe6",
    "metadata": {
     "tags": []
    },
@@ -483,12 +483,35 @@
     }
    ],
    "source": [
-    "0 until 10"
+    "0.until(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "82f0320e-be1e-4d54-8b10-463c7dacd207",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0..9"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 until 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "5e65a098-e2ef-42da-bb08-11ddc1873259",
    "metadata": {
     "tags": []
@@ -500,7 +523,7 @@
        "true"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ff678d58-1fe0-47a9-966c-6d9ab725c621",
    "metadata": {
     "tags": []
@@ -534,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "27ebd492-1053-4eb0-8d5f-b2a5d7f640c0",
    "metadata": {
     "tags": []
@@ -546,7 +569,7 @@
        "10 downTo 1 step 1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "509bac5e-4f0f-4692-bafb-f57d0ae57a69",
    "metadata": {
     "tags": []
@@ -569,7 +592,7 @@
        "10 downTo 2 step 2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "fc6cfa83-782b-47e2-9558-dbd527d46bd3",
    "metadata": {
     "tags": []
@@ -590,7 +613,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_23.jupyter.kts (3:11 - 20) Unresolved reference: newRange1"
+      "Line_24.jupyter.kts (3:11 - 20) Unresolved reference: newRange1"
      ]
     }
    ],
@@ -602,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "6e5156cc-b98f-4326-b51b-6e12543c5c22",
    "metadata": {
     "tags": []
@@ -626,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "10744d65-e14d-4e3a-9fbe-313b1cb41fab",
    "metadata": {
     "tags": []
@@ -655,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "e4559e09-a0b1-4e2b-a34c-8c22364596d7",
    "metadata": {
     "tags": []
@@ -665,7 +688,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_26.jupyter.kts (1:28 - 50) Type mismatch: inferred type is String but Int was expected"
+      "Line_27.jupyter.kts (1:28 - 50) Type mismatch: inferred type is String but Int was expected"
      ]
     }
    ],
@@ -675,8 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "eeccbf5e-e389-43f5-8c72-46477518afad",
+   "execution_count": 29,
+   "id": "b0a09839-cc21-457d-9456-81955707f189",
    "metadata": {
     "tags": []
    },
@@ -684,46 +707,22 @@
     {
      "data": {
       "text/plain": [
-       "[10, 20, 30, 40, 50]"
+       "class kotlin.Array"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Jupyter Kotlin kernel에서는 Array라는 값을 특별히 신경써서 처리해 보여줌\n",
-    "intArr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ba09f66d-c676-4929-915b-4c34ad1de2fa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Ljava.lang.Integer;@602a433b\n",
-      "[Ljava.lang.Integer;@602a433b\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Java와 호환성 때문에 toString()이 제대로 override되어 있지 않음\n",
-    "println( intArr )\n",
-    "println( intArr.toString() )"
+    "intArr::class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fd418f91-b821-4932-b092-eb1a9abb39a2",
+   "id": "eeccbf5e-e389-43f5-8c72-46477518afad",
    "metadata": {
     "tags": []
    },
@@ -740,12 +739,59 @@
     }
    ],
    "source": [
-    "intArr.toList() // Jupyter에서는 리스트로 변환해서 보여주고 있는 것이다"
+    "// Jupyter Kotlin kernel에서는 Array라는 값을 특별히 신경써서 처리해 보여줌\n",
+    "intArr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "ba09f66d-c676-4929-915b-4c34ad1de2fa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Ljava.lang.Integer;@5fdeb340\n",
+      "[Ljava.lang.Integer;@5fdeb340\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Java와 호환성 때문에 toString()이 제대로 override되어 있지 않음\n",
+    "println( intArr )\n",
+    "println( intArr.toString() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fd418f91-b821-4932-b092-eb1a9abb39a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intArr.toList() // Jupyter에서는 리스트로 변환해서 보여주고 있는 것이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "9afbd864-1f8f-428b-8e28-103213205dc7",
    "metadata": {
     "tags": []
@@ -767,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "4d402c93-c3d4-491d-8dea-4808a8dfb9b7",
    "metadata": {
     "tags": []
@@ -791,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "7f0f84ec-d713-4469-b3c9-e49218eb4523",
    "metadata": {
     "tags": []
@@ -844,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "8619ded5-da4a-4c51-b5ae-aabd817f4ed3",
    "metadata": {
     "tags": []
@@ -857,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "94ff4e05-5e22-4f98-8a9e-1bd97e5739bd",
    "metadata": {
     "tags": []
@@ -880,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "b03c4663-e6de-48db-aa88-71f5f200d7bd",
    "metadata": {
     "tags": []
@@ -890,7 +936,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_35.jupyter.kts (1:1 - 7) Val cannot be reassigned"
+      "Line_37.jupyter.kts (1:1 - 7) Val cannot be reassigned"
      ]
     }
    ],
@@ -902,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "4fbe9582-ff28-4fd9-a7d9-cf401967604e",
    "metadata": {
     "tags": []
@@ -925,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "f6a2910f-5b99-4e75-ba8e-04888433ae30",
    "metadata": {
     "tags": []
@@ -937,7 +983,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "f56f9e20-095d-42e2-943b-c2ec251ef2ff",
    "metadata": {
     "tags": []
@@ -971,7 +1017,7 @@
        "[100, 200, 300, 400, 500]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "83ca7c07-4c09-46d8-8642-a5c678265ebc",
    "metadata": {
     "tags": []
@@ -996,7 +1042,7 @@
        "[100, 200, 300, 400, 500]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "d03b5d49-deba-40ac-9cfc-e44dfdc5c4ae",
    "metadata": {
     "tags": []
@@ -1019,7 +1065,7 @@
        "[99, 99, 99, 99, 99]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "17d8987c-5630-4ca7-81ed-77c79da2ddb5",
    "metadata": {
     "tags": []
@@ -1066,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "afc78365-4d54-4198-8d2f-c2a67a7582f9",
    "metadata": {
     "tags": []
@@ -1080,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "b1557eb7-b56b-474a-92e2-64992c80cc95",
    "metadata": {
     "tags": []
@@ -1090,7 +1136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_43.jupyter.kts (1:16 - 28) Not enough information to infer type variable T"
+      "Line_45.jupyter.kts (1:16 - 28) Not enough information to infer type variable T"
      ]
     }
    ],
@@ -1108,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "7018c63c-d1e5-41b9-b63e-1f715a2d8699",
    "metadata": {
     "tags": []
@@ -1121,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "eecbbae9-ee9e-4e73-bd59-80cc942e2d34",
    "metadata": {
     "tags": []
@@ -1133,7 +1179,7 @@
        "[10, 20, 30, 40, 50]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "eb409a37-755f-4391-9c1a-8d98a195e599",
    "metadata": {
     "tags": []
@@ -1156,7 +1202,7 @@
        "[10, 20, 30, 40, 50]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "67f33926-caca-4178-8be8-97a4d9287eed",
    "metadata": {
     "tags": []
@@ -1179,7 +1225,7 @@
        "false"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "498be77e-a323-4483-a961-76bd6d2d8948",
    "metadata": {
     "tags": []
@@ -1202,7 +1248,7 @@
        "false"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "b04d3432-9fc6-4688-8452-44e88c9901c8",
    "metadata": {
     "tags": []
@@ -1225,7 +1271,7 @@
        "true"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
