--- a/Chap05a.ipynb
+++ b/Chap05a.ipynb
@@ -306,6 +306,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba237935-0eae-4dd7-8e19-2268ea3dbe5b",
+   "metadata": {},
+   "source": [
+    "### Trailing lambdas\n",
+    "- https://kotlinlang.org/docs/kotlin-tour-functions.html#trailing-lambdas\n",
+    "\n",
+    "이것도 설명이 필요한데 책에서 빠져 있는 부분"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26da17d7-3c26-4ddc-840e-4e0714c556d5",
    "metadata": {
     "tags": []
