--- a/Chap03c.ipynb
+++ b/Chap03c.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "ee3ecf56-537f-4f95-8daa-56fb5a2c5b93",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26aed15d-ad50-4714-b9e1-be0bb1baef64",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3613256b-a72c-4311-bb34-2eb18961294f",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ba1c536c-6e94-4bd3-9615-50ee13adbb04",
    "metadata": {},
    "outputs": [],
@@ -147,10 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f43fc9d6-ef4f-4e52-9a04-daba45b035ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "??? override me plz ???\n",
+      "??? override me plz ???\n"
+     ]
+    }
+   ],
    "source": [
     "val dog = Dog()\n",
     "val cat = Cat()\n",
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7963871b-732e-4646-abb4-61fd6efbbb73",
    "metadata": {},
    "outputs": [],
@@ -174,24 +183,68 @@
    "id": "28af0c0d-9bbe-44e3-bb52-a74e44525659",
    "metadata": {},
    "source": [
-    "## Interfaces"
+    "## Interfaces\n",
+    "\n",
+    "OOP에 대해 이야기할 때 클래스 상속보다도 인터페이스가 근본이라고 볼 수 있다.\n",
+    "\n",
+    "그러니까 인터페이스를 OOP를 이해하는 기본으로 사고 클래스 상속이는 특수하고 예외적인 경우가 있다고 설명하는 게 나을지도?\n",
+    "\n",
+    "인터페이스는 클래스의 특징을 요약\n",
+    "- 제공하는 행동/동작의 종류가 어떤 것들이 있는지 (즉, 제공해야 할 함수/연산의 목록)\n",
+    "- 하지만 각각의 행동/동작의 구체적 내용은 상관하지 않음 (즉, 함수/연산의 구현은 인터페이스에 포함되지 않음)\n",
+    "\n",
+    "인터페이스는 구현을 포함하지 않으므로 모든 속성/함수가 `abstract`인 `abstract class`와 비슷한 점이 있다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "605b5154-a30d-4b33-8220-020c8436389c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "interface Monoid {\n",
+    "    val identity: Int             // 항등원 (편의상 왼항등원과 오른항등원이 같은 경우만을 생각하자)\n",
+    "    fun op(lhs:Int, rhs:Int): Int // 결합법칙이 성립하는 2항 연산자\n",
+    "}\n",
+    "\n",
+    "interface Group: Monoid {\n",
+    "    fun inverse(x: Int): Int     // 2항 연산자 op에 대한 x의 역원 (역시 편의상 왼/오른 역원이 같은 경우만 생각하자)\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5025bbd1-a106-45c6-8f1b-6c29924bb7fe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Times: Monoid {\n",
+    "    override val identity: Int = 1\n",
+    "    override fun op(lhs: Int, rhs: Int) = lhs * rhs\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "03e8135b-118a-430b-a29d-3b417dc63a68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Plus: Group {\n",
+    "    override val identity: Int = 1\n",
+    "    override fun op(lhs: Int, rhs: Int) = lhs * rhs\n",
+    "    override fun inverse(x: Int) = -x\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
